calico plugin updated

--- a/kubemarine/plugins/yaml/calico-apiserver-v3.25.1-original.yaml
+++ b/kubemarine/plugins/yaml/calico-apiserver-v3.25.1-original.yaml
@@ -99,6 +99,8 @@ spec:
         volumeMounts:
         - mountPath: /code/apiserver.local.config/certificates
           name: calico-apiserver-certs
+        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+          name: calico-apiserver-token
       dnsPolicy: ClusterFirst
       nodeSelector:
         kubernetes.io/os: linux
@@ -114,15 +116,28 @@ spec:
       - name: calico-apiserver-certs
         secret:
           secretName: calico-apiserver-certs
+      - name: calico-apiserver-token
+        secret:
+          secretName: calico-apiserver-token
 
 ---
 
 apiVersion: v1
 kind: ServiceAccount
+automountServiceAccountToken: false
 metadata:
   name: calico-apiserver 
   namespace: calico-apiserver 
 
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: calico-apiserver-token
+  namespace: calico-apiserver
+  annotations:
+    kubernetes.io/service-account.name: calico-apiserver
+type: kubernetes.io/service-account-token
 ---
 
 # Cluster-scoped resources below here.
