--- a/kubemarine/plugins/yaml/calico-v3.22.2-original.yaml
+++ b/kubemarine/plugins/yaml/calico-v3.22.2-original.yaml
@@ -4154,6 +4154,13 @@ spec:
             host: localhost
           periodSeconds: 10
           timeoutSeconds: 10
+        volumeMounts:
+        - name: calico-node-token
+          mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+      volumes:
+       - name: calico-node-token
+         secret:
+           seretName: calico-node-token
 
 ---
 
@@ -4431,6 +4438,8 @@ spec:
             - name: cni-log-dir
               mountPath: /var/log/calico/cni
               readOnly: true
+            - name: calico-node-token
+              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
       volumes:
         # Used by calico-node.
         - name: lib-modules
@@ -4477,13 +4486,26 @@ spec:
           hostPath:
             type: DirectoryOrCreate
             path: /usr/libexec/kubernetes/kubelet-plugins/volume/exec/nodeagent~uds
+        - name: calico-node-token
+          secret:
+            secretName: calico-node-token
 ---
 
 apiVersion: v1
 kind: ServiceAccount
+automountServiceAccountToken: false
 metadata:
   name: calico-node
   namespace: kube-system
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: calico-node-token
+  namespace: kube-system
+  annotations:
+    kubernetes.io/service-account.name: calico-node
+type: kubernetes.io/service-account-token
 
 ---
 # Source: calico/templates/calico-kube-controllers.yaml
@@ -4544,15 +4566,33 @@ spec:
               - /usr/bin/check-status
               - -r
             periodSeconds: 10
+          volumeMounts:
+          - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+            name: calico-kube-controllers-token
+      volumes:
+      - name: calico-kube-controllers-token
+        secret:
+          secretName: calico-kube-controllers-token
 
 ---
 
 apiVersion: v1
 kind: ServiceAccount
+automountServiceAccountToken: false
 metadata:
   name: calico-kube-controllers
   namespace: kube-system
 
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: calico-kube-controllers-token
+  namespace: kube-system
+  annotations:
+    kubernetes.io/service-account.name: calico-kube-controllers
+type: kubernetes.io/service-account-token
 ---
 
 # This manifest creates a Pod Disruption Budget for Controller to allow K8s Cluster Autoscaler to evict
