--- a/kubemarine/plugins/yaml/calico-v3.26.1-original.yaml
+++ b/kubemarine/plugins/yaml/calico-v3.26.1-original.yaml
@@ -4718,6 +4718,8 @@ spec:
               name: host-local-net-dir
             - mountPath: /host/opt/cni/bin
               name: cni-bin-dir
+            - name: calico-node-token
+              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
           securityContext:
             privileged: true
         # This container installs the CNI binaries
@@ -5174,4 +5176,4 @@ spec:
       volumes:
        - name: calico-node-token
          secret:
-           seretName: calico-node-token
+           secretName: calico-node-token
