--- a/kubemarine/plugins/yaml/kubernetes-dashboard-v2.5.1-original.yaml
+++ b/kubemarine/plugins/yaml/kubernetes-dashboard-v2.5.1-original.yaml
@@ -21,21 +21,20 @@ metadata:
 
 apiVersion: v1
 kind: ServiceAccount
-automountServiceAccountToken: false
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
-  name: kubernetes-dashboard-service-account
+  name: kubernetes-dashboard
   namespace: kubernetes-dashboard
 
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: kubernetes-dashboard-service-account-token
+  name: kubernetes-dashboard-token
   namespace: kubernetes-dashboard
   annotations:
-    kubernetes.io/service-account.name: kubernetes-dashboard-service-account
+    kubernetes.io/service-account.name: kubernetes-dashboard
 type: kubernetes.io/service-account-token
 ---
 
@@ -157,7 +156,7 @@ roleRef:
   name: kubernetes-dashboard
 subjects:
   - kind: ServiceAccount
-    name: kubernetes-dashboard-service-account
+    name: kubernetes-dashboard
     namespace: kubernetes-dashboard
 
 ---
@@ -172,7 +171,7 @@ roleRef:
   name: kubernetes-dashboard
 subjects:
   - kind: ServiceAccount
-    name: kubernetes-dashboard-service-account
+    name: kubernetes-dashboard
     namespace: kubernetes-dashboard
 
 ---
@@ -218,8 +217,6 @@ spec:
               # Create on-disk volume to store exec logs
             - mountPath: /tmp
               name: tmp-volume
-            - name: kubernetes-dashboard-service-account-token
-              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
           livenessProbe:
             httpGet:
               scheme: HTTPS
@@ -236,12 +233,9 @@ spec:
         - name: kubernetes-dashboard-certs
           secret:
             secretName: kubernetes-dashboard-certs
-        - name: kubernetes-dashboard-service-account-token
-          secret:
-            secretName: kubernetes-dashboard-service-account-token
         - name: tmp-volume
           emptyDir: {}
-      serviceAccountName: kubernetes-dashboard-service-account
+      serviceAccountName: kubernetes-dashboard
       nodeSelector:
         "kubernetes.io/os": linux
       # Comment the following tolerations if Dashboard must not be deployed on master
@@ -304,14 +298,12 @@ spec:
           volumeMounts:
           - mountPath: /tmp
             name: tmp-volume
-          - name: kubernetes-dashboard-service-account-token
-            mountPath: /var/run/secrets/kubernetes.io/serviceaccount
           securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
             runAsUser: 1001
             runAsGroup: 2001
-      serviceAccountName: kubernetes-dashboard-service-account
+      serviceAccountName: kubernetes-dashboard
       nodeSelector:
         "kubernetes.io/os": linux
       # Comment the following tolerations if Dashboard must not be deployed on master
@@ -321,6 +313,3 @@ spec:
       volumes:
         - name: tmp-volume
           emptyDir: {}
-        - name: kubernetes-dashboard-service-account-token
-          secret:
-            secretName: kubernetes-dashboard-service-account-token
