--- a/kubemarine/plugins/yaml/nginx-ingress-controller-v1.2.0-original.yaml
+++ b/kubemarine/plugins/yaml/nginx-ingress-controller-v1.2.0-original.yaml
@@ -7,7 +7,7 @@ metadata:
   name: ingress-nginx
 ---
 apiVersion: v1
-automountServiceAccountToken: false
+automountServiceAccountToken: true
 kind: ServiceAccount
 metadata:
   labels:
@@ -476,8 +476,6 @@ spec:
         - mountPath: /usr/local/certificates/
           name: webhook-cert
           readOnly: true
-        - name: ingress-nginx-token
-          mountPath: /var/run/secrets/kubernetes.io/serviceaccount
       dnsPolicy: ClusterFirst
       nodeSelector:
         kubernetes.io/os: linux
@@ -487,9 +485,6 @@ spec:
       - name: webhook-cert
         secret:
           secretName: ingress-nginx-admission
-      - name: ingress-nginx-token
-        secret:
-          secretName: ingress-nginx-token
 ---
 apiVersion: batch/v1
 kind: Job
