corrected service account name in dashboard plugin

--- a/kubemarine/plugins/yaml/kubernetes-dashboard-v2.7.0-original.yaml
+++ b/kubemarine/plugins/yaml/kubernetes-dashboard-v2.7.0-original.yaml
@@ -235,7 +235,7 @@ spec:
             secretName: kubernetes-dashboard-certs
         - name: tmp-volume
           emptyDir: {}
-      serviceAccountName: kubernetes-dashboard-service-account
+      serviceAccountName: kubernetes-dashboard
       nodeSelector:
         "kubernetes.io/os": linux
       # Comment the following tolerations if Dashboard must not be deployed on master
@@ -303,7 +303,7 @@ spec:
             readOnlyRootFilesystem: true
             runAsUser: 1001
             runAsGroup: 2001
-      serviceAccountName: kubernetes-dashboard-service-account
+      serviceAccountName: kubernetes-dashboard
       nodeSelector:
         "kubernetes.io/os": linux
       # Comment the following tolerations if Dashboard must not be deployed on master
