--- a/.github/workflows/integration_tests.yaml
+++ b/.github/workflows/integration_tests.yaml
@@ -169,7 +169,7 @@ jobs:
         run: python scripts/thirdparties/sync.py --refresh-manifests
       - name: Check source code unchanged
         run: |
-          if ! git diff --exit-code; then
+          if ! git diff --staged --exit-code; then
             echo ""
             echo -e "\033[91mkubernetes_versions.yaml may be not synchronized with internal compatibility maps, or plugin manifests. See diff above.\033[0m"
             echo -e "\033[91mDo not change internal compatibility maps manually. Use scripts/thirdparties/sync.py to synchronize the compatibility maps.\033[0m"
