--- a/kubemarine/patches/software_upgrade.yaml
+++ b/kubemarine/patches/software_upgrade.yaml
@@ -8,8 +8,10 @@
 # The order of upgrade of defined by the implementation.
 
 thirdparties:
-  calicoctl: []
-  crictl: []
+  calicoctl:
+  - v1.29.1
+  crictl:
+  - v1.29.1
 packages:
   docker:
     version_rhel: []
@@ -34,7 +36,10 @@ packages:
     version_rhel9: false
     version_debian: false
 plugins:
-  calico: []
-  nginx-ingress-controller: []
+  calico:
+  - v1.29.1
+  nginx-ingress-controller:
+  - v1.29.1
   kubernetes-dashboard: []
-  local-path-provisioner: []
+  local-path-provisioner:
+  - v1.29.1
