--- a/.github/workflows/integration_tests.yaml
+++ b/.github/workflows/integration_tests.yaml
@@ -75,6 +75,9 @@ jobs:
       - name: Check paas
         id: test_check_paas
         run: kubemarine check_paas -c ${{ env.cluster_yaml_file }} --dump-location ./results/check_paas_dump/
+      - name: Get events kubectl
+        if: failure()
+        run: sudo kubectl get events --sort-by='.metadata.creationTimestamp' -A
       - name: Collect journalctl logs
         if: failure()
         run: |
@@ -136,7 +139,7 @@ jobs:
         run: kubemarine check_paas -c ${{ env.cluster_yaml_file }} --dump-location ./results/check_paas_dump/
       - name: Get events kubectl
         if: failure()
-        run: kubectl get events --sort-by='.metadata.creationTimestamp' -A
+        run: sudo kubectl get events --sort-by='.metadata.creationTimestamp' -A
       - name: Collect journalctl logs
         if: failure()
         run: |
@@ -166,7 +169,7 @@ jobs:
         run: python scripts/thirdparties/sync.py --refresh-manifests
       - name: Check source code unchanged
         run: |
-          if ! git diff --exit-code; then
+          if ! git diff --staged --exit-code; then
             echo ""
             echo -e "\033[91mkubernetes_versions.yaml may be not synchronized with internal compatibility maps, or plugin manifests. See diff above.\033[0m"
             echo -e "\033[91mDo not change internal compatibility maps manually. Use scripts/thirdparties/sync.py to synchronize the compatibility maps.\033[0m"
