Add JSON schema for new reconfigure procedure and prepare implementation stub

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -81,10 +81,12 @@ services:
     scheduler:
       extraArgs:
         profiling: "false"
+      extraVolumes: []
     controllerManager:
       extraArgs:
         profiling: "false"
         terminated-pod-gc-threshold: "1000"
+      extraVolumes: []
   kubeadm_patches:
     # bind-address flag for apiServer is set in the code
     apiServer: []
