--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -13,6 +13,8 @@ kubernetes_versions:
     supported: true
   v1.28:
     supported: true
+  v1.29:
+    supported: true
 compatibility_map:
 # This section should be changed manually.
   v1.23.1:
@@ -123,7 +125,12 @@ compatibility_map:
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.25
     crictl: v1.28.0
-
+  v1.29.1:
+    calico: v3.27.0
+    nginx-ingress-controller: v1.9.5
+    kubernetes-dashboard: v2.7.0
+    local-path-provisioner: v0.0.26
+    crictl: v1.29.0
 
 # After any change, please run scripts/thirdparties/sync.py
 
