--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -37,6 +37,8 @@ kube-apiserver:
     version: v1.28.3
   v1.28.4:
     version: v1.28.4
+  v1.28.6:
+    version: v1.28.6
   v1.29.1:
     version: v1.29.1
 kube-controller-manager:
@@ -76,6 +78,8 @@ kube-controller-manager:
     version: v1.28.3
   v1.28.4:
     version: v1.28.4
+  v1.28.6:
+    version: v1.28.6
   v1.29.1:
     version: v1.29.1
 kube-scheduler:
@@ -115,6 +119,8 @@ kube-scheduler:
     version: v1.28.3
   v1.28.4:
     version: v1.28.4
+  v1.28.6:
+    version: v1.28.6
   v1.29.1:
     version: v1.29.1
 kube-proxy:
@@ -154,6 +160,8 @@ kube-proxy:
     version: v1.28.3
   v1.28.4:
     version: v1.28.4
+  v1.28.6:
+    version: v1.28.6
   v1.29.1:
     version: v1.29.1
 pause:
@@ -192,6 +200,8 @@ pause:
   v1.28.3:
     version: '3.9'
   v1.28.4:
+    version: '3.9'
+  v1.28.6:
     version: '3.9'
   v1.29.1:
     version: '3.9'
@@ -232,6 +242,8 @@ etcd:
     version: 3.5.9-0
   v1.28.4:
     version: 3.5.9-0
+  v1.28.6:
+    version: 3.5.10-0
   v1.29.1:
     version: 3.5.10-0
 coredns/coredns:
@@ -270,6 +282,8 @@ coredns/coredns:
   v1.28.3:
     version: v1.10.1
   v1.28.4:
+    version: v1.10.1
+  v1.28.6:
     version: v1.10.1
   v1.29.1:
     version: v1.11.1
