--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -125,6 +125,12 @@ compatibility_map:
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.25
     crictl: v1.28.0
+  v1.28.6:
+    calico: v3.27.0
+    nginx-ingress-controller: v1.9.5
+    kubernetes-dashboard: v2.7.0
+    local-path-provisioner: v0.0.26
+    crictl: v1.29.0
   v1.29.1:
     calico: v3.27.0
     nginx-ingress-controller: v1.9.5
