--- a/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
@@ -41,6 +41,8 @@ calico:
     version: v3.26.4
   v1.28.4:
     version: v3.26.4
+  v1.28.6:
+    version: v3.27.0
   v1.29.1:
     version: v3.27.0
 nginx-ingress-controller:
@@ -97,6 +99,9 @@ nginx-ingress-controller:
     webhook-version: v20231011-8b53cabe0
   v1.28.4:
     version: v1.9.4
+    webhook-version: v20231011-8b53cabe0
+  v1.28.6:
+    version: v1.9.5
     webhook-version: v20231011-8b53cabe0
   v1.29.1:
     version: v1.9.5
@@ -156,6 +161,9 @@ kubernetes-dashboard:
   v1.28.4:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
+  v1.28.6:
+    version: v2.7.0
+    metrics-scraper-version: v1.0.8
   v1.29.1:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
@@ -213,6 +221,9 @@ local-path-provisioner:
     busybox-version: 1.34.1
   v1.28.4:
     version: v0.0.25
+    busybox-version: 1.34.1
+  v1.28.6:
+    version: v0.0.26
     busybox-version: 1.34.1
   v1.29.1:
     version: v0.0.26
