--- a/kubemarine/resources/configurations/compatibility/internal/thirdparties.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/thirdparties.yaml
@@ -38,6 +38,8 @@ kubeadm:
     sha1: 8935140d6a7b64f9038c911246cfc2a8da843673
   v1.28.4:
     sha1: 450eef85788fb68c4c26db82c6a0fb222e07869d
+  v1.28.6:
+    sha1: a6846fe15ce29865e9c813a677f40dc21868223c
   v1.29.1:
     sha1: 14390d6df2bb0b6546efd2238068c300461053fd
 kubelet:
@@ -77,6 +79,8 @@ kubelet:
     sha1: de8824a4eac34277251f911e944c69488359ee69
   v1.28.4:
     sha1: 32ef1daaf8f4996d16ff386f44cc0555c6f3de24
+  v1.28.6:
+    sha1: 25e2675bcbc59004ef148dc91a25404132b1faa1
   v1.29.1:
     sha1: aa871f4656bf1cc6393058f28d5c938268df3d4e
 kubectl:
@@ -116,6 +120,8 @@ kubectl:
     sha1: 096796f53a9b5af22e9e14b694fdefc870182b6e
   v1.28.4:
     sha1: 9a1691d307cb419d7047baccba89765015b2b7a4
+  v1.28.6:
+    sha1: 1458cc8aa68c2c4406db9fb36eeff181460d7f65
   v1.29.1:
     sha1: 5867f210ce90c62e0551062492751e43c2ae6a46
 calicoctl:
@@ -175,6 +181,9 @@ calicoctl:
   v1.28.4:
     version: v3.26.4
     sha1: 46875b3d28318553fe382db0766a0916f2556217
+  v1.28.6:
+    version: v3.27.0
+    sha1: 4d62cba82a4aee97ab20b96e7270da85d77ce20e
   v1.29.1:
     version: v3.27.0
     sha1: 4d62cba82a4aee97ab20b96e7270da85d77ce20e
@@ -235,6 +244,9 @@ crictl:
   v1.28.4:
     version: v1.28.0
     sha1: 1199411456ab5a1e0dd9524724f15e92aa3f9da7
+  v1.28.6:
+    version: v1.29.0
+    sha1: c4224ed25f729dbf73976198c8bc73dec0bf5a5f
   v1.29.1:
     version: v1.29.0
     sha1: c4224ed25f729dbf73976198c8bc73dec0bf5a5f
