--- a/kubemarine/patches/software_upgrade.yaml
+++ b/kubemarine/patches/software_upgrade.yaml
@@ -35,6 +35,9 @@ packages:
     version_debian: false
 plugins:
   calico: []
-  nginx-ingress-controller: []
+  nginx-ingress-controller:
+  - v1.28.0
+  - v1.28.3
+  - v1.28.4
   kubernetes-dashboard: []
   local-path-provisioner: []
