--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,8 @@ fail-on = [
     "consider-using-sys-exit",
     # List of other warnings that are considered more error prone
     "undefined-loop-variable",
+    # List of other non-critical warnings that rarely appear
+    "useless-parent-delegation",
 ]
 
 [tool.pylint.format]
