--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -40,11 +40,7 @@ services:
   kubeadm_kube-proxy:
     apiVersion: kubeproxy.config.k8s.io/v1alpha1
     kind: KubeProxyConfiguration
-    conntrack:
-      min: |
-        {% if services.kubeadm.kubernetesVersion | versionkey >= (1, 29, 0) %}
-        {{ services.sysctl["net.netfilter.nf_conntrack_max"] }}
-        {% endif %}
+    conntrack: {}
   kubeadm_flags:
     ignorePreflightErrors: Port-6443,CoreDNSUnsupportedPlugins
   kubeadm:
