--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,6 +116,8 @@ fail-on = [
     "bad-builtin",
     # https://github.com/pyinstaller/pyinstaller/issues/1687
     "consider-using-sys-exit",
+    # Since we use ruamel.yaml, using of `type() == ` checks is considered more error prone.
+    "unidiomatic-typecheck",
     # Consider using kubemarine.core.utils.open_(external|internal).
     "unspecified-encoding",
     # List of other warnings that are considered more error prone
