--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -180,17 +180,33 @@ services:
       - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_defrag_ipv6{% endif %}'
 
   sysctl:
-    net.bridge.bridge-nf-call-iptables: 1
-    net.ipv4.ip_forward: 1
-    net.ipv4.ip_nonlocal_bind: 1
-    net.ipv4.conf.all.route_localnet: 1
-    net.bridge.bridge-nf-call-ip6tables: '{% if not nodes[0]["internal_address"]|isipv4 %}1{% endif %}'
-    net.ipv6.conf.all.forwarding: '{% if not nodes[0]["internal_address"]|isipv4 %}1{% endif %}'
-    net.ipv6.ip_nonlocal_bind: '{% if not nodes[0]["internal_address"]|isipv4 %}1{% endif %}'
-    net.netfilter.nf_conntrack_max: 1000000
-    kernel.panic: 10
-    vm.overcommit_memory: 1
-    kernel.panic_on_oops: 1
+    net.bridge.bridge-nf-call-iptables:
+      value: 1
+    net.ipv4.ip_forward:
+      value: 1
+    net.ipv4.ip_nonlocal_bind:
+      value: 1
+    net.ipv4.conf.all.route_localnet:
+      value: 1
+    net.bridge.bridge-nf-call-ip6tables:
+      value: 1
+      install: '{{ nodes[0]["internal_address"] | isipv6 }}'
+    net.ipv6.conf.all.forwarding:
+      value: 1
+      install: '{{ nodes[0]["internal_address"] | isipv6 }}'
+    net.ipv6.ip_nonlocal_bind:
+      value: 1
+      install: '{{ nodes[0]["internal_address"] | isipv6 }}'
+    net.netfilter.nf_conntrack_max:
+      value: 1000000
+    kernel.panic:
+      value: 10
+    vm.overcommit_memory:
+      value: 1
+    kernel.panic_on_oops:
+      value: 1
+    kernel.pid_max: {}
+      # default value is set in sysctl.enrich_inventory
 
   etc_hosts:
     127.0.0.1:
