support_k8s_v1.28.7_&_nginx_ingress_v1.9.6

--- a/kubemarine/patches/software_upgrade.yaml
+++ b/kubemarine/patches/software_upgrade.yaml
@@ -35,6 +35,7 @@ packages:
     version_debian: false
 plugins:
   calico: []
-  nginx-ingress-controller: []
+  nginx-ingress-controller:
+  - v1.29.1
   kubernetes-dashboard: []
   local-path-provisioner: []
