--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -39,6 +39,8 @@ kube-apiserver:
     version: v1.28.4
   v1.28.6:
     version: v1.28.6
+  v1.28.7:
+    version: v1.28.7
   v1.29.1:
     version: v1.29.1
 kube-controller-manager:
@@ -80,6 +82,8 @@ kube-controller-manager:
     version: v1.28.4
   v1.28.6:
     version: v1.28.6
+  v1.28.7:
+    version: v1.28.7
   v1.29.1:
     version: v1.29.1
 kube-scheduler:
@@ -121,6 +125,8 @@ kube-scheduler:
     version: v1.28.4
   v1.28.6:
     version: v1.28.6
+  v1.28.7:
+    version: v1.28.7
   v1.29.1:
     version: v1.29.1
 kube-proxy:
@@ -162,6 +168,8 @@ kube-proxy:
     version: v1.28.4
   v1.28.6:
     version: v1.28.6
+  v1.28.7:
+    version: v1.28.7
   v1.29.1:
     version: v1.29.1
 pause:
@@ -202,6 +210,8 @@ pause:
   v1.28.4:
     version: '3.9'
   v1.28.6:
+    version: '3.9'
+  v1.28.7:
     version: '3.9'
   v1.29.1:
     version: '3.9'
@@ -244,6 +254,8 @@ etcd:
     version: 3.5.9-0
   v1.28.6:
     version: 3.5.10-0
+  v1.28.7:
+    version: 3.5.10-0
   v1.29.1:
     version: 3.5.10-0
 coredns/coredns:
@@ -284,6 +296,8 @@ coredns/coredns:
   v1.28.4:
     version: v1.10.1
   v1.28.6:
+    version: v1.10.1
+  v1.28.7:
     version: v1.10.1
   v1.29.1:
     version: v1.11.1
