--- a/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
@@ -43,6 +43,8 @@ calico:
     version: v3.26.4
   v1.28.6:
     version: v3.27.0
+  v1.28.7:
+    version: v3.27.0
   v1.29.1:
     version: v3.27.0
 nginx-ingress-controller:
@@ -103,9 +105,12 @@ nginx-ingress-controller:
   v1.28.6:
     version: v1.9.5
     webhook-version: v20231011-8b53cabe0
+  v1.28.7:
+    version: v1.9.6
+    webhook-version: v20231226-1a7112e06
   v1.29.1:
-    version: v1.9.5
-    webhook-version: v20231011-8b53cabe0
+    version: v1.9.6
+    webhook-version: v20231226-1a7112e06
 kubernetes-dashboard:
   v1.23.1:
     version: v2.5.1
@@ -162,6 +167,9 @@ kubernetes-dashboard:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
   v1.28.6:
+    version: v2.7.0
+    metrics-scraper-version: v1.0.8
+  v1.28.7:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
   v1.29.1:
@@ -223,6 +231,9 @@ local-path-provisioner:
     version: v0.0.25
     busybox-version: 1.34.1
   v1.28.6:
+    version: v0.0.26
+    busybox-version: 1.34.1
+  v1.28.7:
     version: v0.0.26
     busybox-version: 1.34.1
   v1.29.1:
