--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -151,33 +151,32 @@ services:
 
   modprobe:
     rhel:
-      - br_netfilter
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_conntrack_ipv6{% else %}nf_conntrack{% endif %}'
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}ip6table_filter{% endif %}'
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_nat_masquerade_ipv6{% endif %}'
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_reject_ipv6{% endif %}'
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_defrag_ipv6{% endif %}'
-    rhel8:
-      - br_netfilter
-      - nf_conntrack
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}ip6table_filter{% endif %}'
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_nat{% endif %}'
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_reject_ipv6{% endif %}'
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_defrag_ipv6{% endif %}'
-    rhel9:
-      - br_netfilter
-      - nf_conntrack
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}ip6table_filter{% endif %}'
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_nat{% endif %}'
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_reject_ipv6{% endif %}'
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_defrag_ipv6{% endif %}'
-    debian:
-      - br_netfilter
-      - nf_conntrack
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}ip6table_filter{% endif %}'
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_nat{% endif %}'
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_reject_ipv6{% endif %}'
-      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_defrag_ipv6{% endif %}'
+      - modulename: br_netfilter
+      - modulename: nf_conntrack
+        install: '{{ nodes[0]["internal_address"] | isipv4 }}'
+      - modulename: nf_conntrack_ipv6
+        install: '{{ nodes[0]["internal_address"] | isipv6 }}'
+      - modulename: ip6table_filter
+        install: '{{ nodes[0]["internal_address"] | isipv6 }}'
+      - modulename: nf_nat_masquerade_ipv6
+        install: '{{ nodes[0]["internal_address"] | isipv6 }}'
+      - modulename: nf_reject_ipv6
+        install: '{{ nodes[0]["internal_address"] | isipv6 }}'
+      - modulename: nf_defrag_ipv6
+        install: '{{ nodes[0]["internal_address"] | isipv6 }}'
+    rhel8: &modprobe-default-modules
+      - modulename: br_netfilter
+      - modulename: nf_conntrack
+      - modulename: ip6table_filter
+        install: '{{ nodes[0]["internal_address"] | isipv6 }}'
+      - modulename: nf_nat
+        install: '{{ nodes[0]["internal_address"] | isipv6 }}'
+      - modulename: nf_reject_ipv6
+        install: '{{ nodes[0]["internal_address"] | isipv6 }}'
+      - modulename: nf_defrag_ipv6
+        install: '{{ nodes[0]["internal_address"] | isipv6 }}'
+    rhel9: *modprobe-default-modules
+    debian: *modprobe-default-modules
 
   sysctl:
     net.bridge.bridge-nf-call-iptables:
