--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -15,6 +15,8 @@ kubernetes_versions:
     supported: true
   v1.29:
     supported: true
+  v1.30:
+    supported: true
 compatibility_map:
 # This section should be changed manually.
   v1.23.1:
@@ -156,6 +158,12 @@ compatibility_map:
     local-path-provisioner: v0.0.26
     crictl: v1.29.0
   v1.29.4:
+    calico: v3.27.3
+    nginx-ingress-controller: v1.10.1
+    kubernetes-dashboard: v2.7.0
+    local-path-provisioner: v0.0.26
+    crictl: v1.30.0
+  v1.30.0:
     calico: v3.27.3
     nginx-ingress-controller: v1.10.1
     kubernetes-dashboard: v2.7.0
