--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     "jinja2==3.1.*",
     "MarkupSafe==2.1.*",
     "invoke==2.2.*",
-    "ruamel.yaml==0.17.22",
+    "ruamel.yaml==0.18.*",
     "pygelf==0.4.*",
     "toml==0.10.*",
     "python-dateutil==2.8.*",
