Code changes to respect python 3.8
Added dependency on useful-types.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,8 @@ dependencies = [
     "jsonschema==4.22.*",
     "referencing==0.35.*",
     "typing_extensions==4.11.*",
-    "pathvalidate==3.2.*"
+    "pathvalidate==3.2.*",
+    "useful_types==0.2.*",
 ]
 requires-python = ">=3.8"
 
